--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Jan 10 17:58:51 CST 2017
+#Thu Feb 23 16:06:13 CST 2017
 org.eclipse.jdt.apt.processorOptions/com.ibm.ws.ast.jws.annotations.processor.validateWSDL=on
-org.eclipse.jdt.apt.aptEnabled=false
+org.eclipse.jdt.apt.aptEnabled=true
 eclipse.preferences.version=1
