--- a/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,4 +1,4 @@
-#Tue Jan 10 17:56:06 CST 2017
-classpath.helper/org.eclipse.jst.server.core.container\:\:com.ibm.ws.ast.st.runtime.runtimeTarget.v61\:\:was.base.v61/owners=jst.web\:2.4
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:WebSphere\ v6.1\ JRE/owners=jst.java\:5.0
+#Thu Feb 23 16:06:17 CST 2017
+classpath.helper/org.eclipse.jst.server.core.container\:\:com.ibm.ws.ast.st.runtime.runtimeTarget.v70\:\:was.base.v7/owners=jst.web\:2.4
 eclipse.preferences.version=1
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:WebSphere\ Application\ Server\ v7.0\ JRE/owners=jst.java\:6.0
